[package]
name = "key_hook"
version = "0.1.0"
authors = ["JesseBadry <jessebadry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.2.5"}
kernel32-sys = "0.2.2"
jb_utils = {git="https://github.com/jessebadry/Jesse-s-Utils.git"}
lazy_static = "1.4.0"
user32-sys = "0.2.0"
futures = {version= "0.3.5", features=["executor","thread-pool"]}